# VrixicEngine

./: .gitignore  LICENSE  MakeProjectBuild.bat  README.md
Assets/Shaders/EdgeDetection/: outline.frag  outline.vert
Assets/Shaders/PBR/: pbr.vert  pbr_khr_debug.frag
Assets/Shaders/Skybox/: brdf_integration.frag  brdf_integration.vert  hdr_khronos.frag  hdr_khronos.vert  irridiance.frag  prefilter_envmap.frag  prefilter_envmap.vert  skybox.vert
Assets/Shaders/imgui/: ImguiPixel.hlsl  ImguiVertex.hlsl
CMake/: AllSourceFiles.txt  CMakeLists.txt  RunCMake.bat  SetupCMake.bat  VrixicEngine.sln.licenseheader
CMake/VrixicEngineBuild/: ALL_BUILD.vcxproj.filters  VrixicEngine.sln  VrixicEngine.vcxproj  VrixicEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Sandbox/: Sandbox.cpp  Sandbox.vcxproj  imgui.ini
Source/: .editorconfig  GetAllSourceFiles.bat
Source/Containers/: Array.h  IteratorGenerics.h  List.h  Map.h
Source/Core/: Application.cpp  Application.h  Core.h  KeyCodes.h  MouseCodes.h  VrixicEngine.h
Source/Core/Editor/: GameEditor.cpp  GameEditor.h
Source/Core/Events/: ApplicationEvents.h  KeyEvent.h  MouseEvents.h  WindowEvent.h
Source/Core/Misc/: IManager.h  Interface.h  NonCopyableObject.h
Source/Core/Platform/Windows/: GLFWWindowsWindow.cpp  GLFWWindowsWindow.h  WindowsWindow.cpp  WindowsWindow.h
Source/Core/Windows/: Window.cpp  Window.h
Source/Misc/: Assert.h
Source/Misc/Defines/: GenericDefines.h  MemoryProfilerDefines.h  StringDefines.h  VulkanProfilerDefines.h
Source/Misc/Logging/: Log.cpp  Log.h
Source/Misc/Profiling/: Profiler.h
Source/Runtime/Core/Algorithms/Hashing/: CRC32.h
Source/Runtime/Core/Math/: Frustum.h  LookAtMatrix4D.h  Matrix4D.h  Plane.h  ProjectionMatrix4D.h  Quat.h  Ray.h  TranslationMatrix4D.h  Vector2D.h  Vector3D.h  Vector4D.h  VrixicMath.cpp  VrixicMath.h  VrixicMathDirectX.h  VrixicMathHelper.h
Source/Runtime/Core/Strings/: StringHash.cpp  StringHash.h
Source/Runtime/Engine/: GameEngine.cpp  GameEngine.h  GameWorld.h  RenderInterface.h
Source/Runtime/EntryPoint/: EntryPoint.cpp
Source/Runtime/File/: AsynchronousLoader.cpp  AsynchronousLoader.h  FileHelper.h  FileManager.h  FileReader.h  GLTFLoader.h
Source/Runtime/Graphics/: Buffer.cpp  Buffer.h  BufferGenerics.h  CommandBuffer.h  CommandBufferGenerics.h  CommandPool.h  CommandPoolGenerics.h  CommandQueue.h  DescriptorSet.h  Extents.h  Fence.h  Format.h  FrameBuffer.h  FrameBufferGenerics.h  ICommandBufferManager.h  IRenderInterface.h  Pipeline.h  PipelineGenerics.h  PipelineLayout.cpp  PipelineLayout.h  Queue.h  RenderInterfaceGenerics.h  RenderPass.h  RenderPassGenerics.h  RenderResource.h  RenderResourceGenerics.h  Renderer.cpp  Renderer.h  ResourceGenerics.h  Sampler.cpp  Sampler.h  SamplerGenerics.h  Semaphore.h  Shader.h  ShaderGenerics.h  Surface.h  SwapChain.h  SwapChainGenerics.h  Texture.cpp  Texture.h  (+4 more)
Source/Runtime/Graphics/FrameGraph/: FrameGraph.cpp  FrameGraph.h  FrameGraphBuilder.cpp  FrameGraphBuilder.h  FrameGraphGenerics.h
Source/Runtime/Graphics/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandBufferManager.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderInterface.cpp  VulkanRenderInterface.h  VulkanRenderLayout.cpp  VulkanRenderLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanShader.cpp  VulkanShader.h  VulkanTextureView.cpp  VulkanTextureView.h  VulkanTypeConverter.cpp  VulkanTypeConverter.h  VulkanUtils.h
Source/Runtime/Memory/: ResourceManager.cpp  ResourceManager.h  ResourceManagerImp.h
Source/Runtime/Memory/Core/: DoubleEndedStackMemoryAllocater.h  LinearMemoryAllocater.h  MemoryAllocater.h  MemoryHeap.h  MemoryManager.h  MemoryPool.h  MemoryUtils.h  StackMemoryAllocater.h
Source/Runtime/Memory/Core/Allocaters/: DoubleEndedStackMemoryAllocater.h  MemoryAllocater.h  StackMemoryAllocater.h
Source/Runtime/Memory/Resources/: ResourcePool.cpp  ResourcePool.h  TextureResourcePool.cpp  TextureResourcePool.h
Source/Runtime/Memory/Vulkan/: VulkanResourceManager.cpp  VulkanResourceManager.h
Test/: ReadMe.txt
VrixicEngineBuild/: ALL_BUILD.vcxproj  VrixicEngine.vcxproj  VrixicEngine.vcxproj.filters  ZERO_CHECK.vcxproj
